<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ParkIt</string>
    <string name="menu_add">Add</string>
    <string name="menu_alarm">Alarm</string>
    <string name="menu_refresh">Sync Points</string>
    <string name="menu_help">Help</string>
    <string name="info_name">Information</string>
    <string name="info_edit">Edit</string>
    <string name="info_goto">Go to&#8230;</string>
    <string name="info_save">Save</string>
    <string name="info_next">Next</string>
    <string name="info_cancel">Cancel</string>

    <string name="name">Name: </string>
    <string name="info_rate">Rate</string>
    <string name="info_hours">Hours</string>
    <string name="info_hours_of">Hours of Operation</string>
    <string name="info_limit_end">hour(s) limit</string>
    <string name="rate">$</string>
    <string name="junk">M&#8211;Sa:\t9&#8211;5\n\nSu: 9&#8211;10</string>
    <string name="parking_type">Parking Type: </string>
    <string name="payment_type">Payment Type: </string>
    <string name="time_limit">Time Limit: </string>
    
    <string name="edit_local">Save only to phone</string>
    <string name="edit_remote">Save to server</string>
    
    <!-- Alarm Activity -->
    <string name="alarm_meter_title">Time on meter:</string>
    <string name="alarm_alert_title">Alert before expiration:</string>
    <string name="alarm_start_button">Start</string>
    <string name="alarm_hours_label">Hours</string>
    <string name="alarm_min_label">Min</string>
    <string name="alarm_remind_title">Remind me every </string>
    <!-- End Alarm Activity -->
    
    <string name="interval_prompt">Select number of minutes</string>
    <string name="add_title">Tap map to add point</string>
    <string name="type_prompt">Select the type of parking:</string>
    <string name="payment_prompt">Select the type of payment:</string>
    <string name="disclaimer">DISCLAIMER: By using this app, you agree that we, the developers of ParkIt, 
        are not liable for any damages done to your vehicle while using this app. This app is primarily meant
        for a passenger to use so that the driver can focus on the road.</string>
    <string-array name="park_type">
        <item>Meter</item>
        <item>Parking Garage</item>
        <item>Parking Lot</item>
    </string-array>
    <string-array name="park_pay_type">
        <item>Coin</item>
        <item>Cash</item>
        <item>Credit Card</item>
    </string-array>
    <string-array name="intervals">
    	<item>120</item>
		<item>90</item>
    	<item>60</item>
		<item>45</item>
		<item>30</item>
		<item>15</item>
		<item>10</item>
		<item>5</item>
	</string-array>
</resources>