<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="1">
        <TextView
            android:id="@+id/nv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="23dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/name" />    
        <EditText 
            android:id="@+id/nv_add"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:singleLine="true"
            android:layout_toRightOf="@id/nv" />
        
        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nv"
            android:textSize="23dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/parking_type" />
        <Spinner android:id="@+id/tv_add"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nv"
            android:layout_toRightOf="@id/tv"
            android:prompt="@string/type_prompt" />
        
        <TextView
            android:id="@+id/ptv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv"
            android:textSize="23dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/payment_type" />
        <Spinner android:id="@+id/pt_add"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv"
            android:layout_toRightOf="@id/ptv"
            android:prompt="@string/payment_prompt" />
        
        <TextView
            android:id="@+id/lv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ptv"
            android:textSize="23dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/time_limit" />
        <EditText
            android:id="@+id/lv_add"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/lv"
            android:textSize="17dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:inputType="number"
            android:layout_below="@id/ptv" />
        
        <TextView
            android:id="@+id/rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lv"
            android:textSize="23dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/rate" />
        <EditText
            android:id="@+id/rv_add"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lv"
            android:textSize="17dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:singleLine="true"
            android:layout_toRightOf="@id/rv" />
    </RelativeLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@android:style/ButtonBar">
        <Button android:id="@+id/next_button"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/info_next" />
    </LinearLayout>
   
</LinearLayout>